Dates wrap fixed on /works/

--- a/src/_includes/_base.scss
+++ b/src/_includes/_base.scss
@@ -28,3 +28,7 @@ img {
     display: block;
     color: #0000;
 }
+
+.nowrap {
+    text-wrap: nowrap;
+}
